tests/machine/x/hs/user_type_literal.error

/workspace/mochi/tests/machine/x/hs/user_type_literal.hs:112:10: error:
    Not in scope: type constructor or class ‘Aeson.FromJSON’
    NB: no module named ‘Aeson’ is imported.
    |
112 | instance Aeson.FromJSON Person
    |          ^^^^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/user_type_literal.hs:120:10: error:
    Not in scope: type constructor or class ‘Aeson.FromJSON’
    NB: no module named ‘Aeson’ is imported.
    |
120 | instance Aeson.FromJSON Book
    |          ^^^^^^^^^^^^^^


Context around line 112:
  110|   deriving (Eq, Show, Generic)
  111| 
  112| instance Aeson.FromJSON Person
  113| 
  114| data Book = Book
